Mailtrap sectup and signup route created

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-MONGO_URL=""
+MONGO_URL="mongodb+srv://satis:satis@cluster0.axbat9t.mongodb.net/auth"
 TOKEN_SECRET=SATIS
 DOMAIN=http://localhost:3000
+MAIL_USER="6536a04dd0cc21"
+MAIL_PASSWORD="f08e7c5bbe0aa3"
